# m32_ros

./: .cproject  .project  CMakeLists.txt  InuDev.chm  README.md  README.md~  package.xml  package.xml~
include/: AudioStreamExt.h  AuxStream.h  AuxStreamExt.h  BaseFrame.h  BaseFrameExt.h  ControllerStreamExt.h  DepthStream.h  DepthStreamExt.h  FaceExpressionsStreamExt.h  FeaturesTrackingFrameExt.h  FeaturesTrackingStreamExt.h  FrameStatistics.h  GazeStreamExt.h  GeneralFrameExt.h  HandsStreamExt.h  HeadStreamExt.h  ImageFrame.h  ImageFrameExt.h  InuError.h  InuErrorExt.h  InuSensor.h  InuSensorExt.h  InuStreams.h  SlamStream.h  Version.h  VideoStreamExt.h
launch/: rgbd.launch  rgbd.launch~
src/: CMakeLists.txtbak  Inuitive.cpp  Inuitive.h  node.cpp
